2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/event.hh (event::event): New constructor.
	(event::operator<): New operator.

	* port.cc (port::has_width, port::width): Added some error
	checking.

	* music/spatial.hh,
	spatial.cc (spatial_negotiator::wrap_intervals): Compute local
	offset differently depending on index::type argument.

	* music/index_map.hh (index_interval::set_local): New member
	function.

	* linear_index.cc, permutation_index.cc: Correctly compute local
	index offset.

	* configuration (configuration::configuration,
	configuration::~configuration): Create and delete application_map
	and connectivity also when not launched under music.

	* event_router.cc (event_router::insert_event): Always subtract
	local offset (not subtracting requires that all offsets are zero
	which only happens either if both sides use global indices or if
	both sides use local indices which even out).

2008-10-31  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/spatial.hh, spatial.cc (negotiate_width): Error check
	width.

	* music/event_router.hh (inserter_global): Offsets are negative
	due to the spatial negotiation algorithm.

	* music/spatial.hh, spatial.cc (intersect_to_buffers): New
	implementation which allows index_maps for different MPI processes
	to overlap.  The new algorithm is O (NP^2) where N is the number of
	indices and P the number of processes.  (The old one was O (N).)

	* music/permutation_index.hh, permutation_index.cc: Implemented.

	* music/index_map.hh (index_map): Use value semantics (so that we
	can copy the position by copying the iterator).

	* music/linear_index.hh (linear_index): Ditto.

2008-10-30  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* spatial.cc: Bugfix: Changed MPI::INTEGER (Fortran) -> MPI::INT

	* spatial.hh (TRANSMITTED_INTERVALS_MAX): New constant.

	* spatial.cc (spatial_negotiator::send,
	spatial_negotiator::receive): Allow transmission of an arbitrary
	number of spatial negotiation intervals.
