@@ -1,5 +1,9 @@
 2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* FIBO.cc (FIBO::FIBO, FIBO::grow): Bugfix: Use resize instead of
+	reserve on buffer vector, otherwise old elements are not
+	guaranteed to be copied.
+
 	* music/event.hh (event::event): New constructor.
 	(event::operator<): New operator.
 
